test/parser/protonlang_parser.go
// Code generated from ProtonLang.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // ProtonLang

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "'#include'", "'target'", "'namespace'", "'context'", "'alias'",
	"'index'", "'method'", "'in'", "'as'", "'component'", "'='", "';'", "'_'",
	"':'", "'\"'", "'{'", "'}'", "'.'", "'<'", "'>'", "'('", "')'", "','",
}
var symbolicNames = []string{
	"", "StringLiteral", "INCLUDE", "TARGET", "NAMESPACE", "CONTEXT", "ALIAS",
	"INDEX", "METHOD", "IN", "AS", "COMPONENT", "EQUALS", "SEMICOLON", "UNDERSCORE",
	"COLON", "DOUBLE_QUOTE", "LCURLEY", "RCURLEY", "PERIOD", "LESS_THAN", "GREATER_THAN",
	"LPAREN", "RPAREN", "COMMA", "WORD", "NUMBER", "COMMENT", "WS",
}

var ruleNames = []string{
	"document", "includeStatement", "targetStatement", "namespaceStatement",
	"contextStatement", "context", "aliasStatement", "alias", "componentStatement",
	"asStatement", "inStatement", "component", "entityIndexStatement", "entityIndex",
	"entityIndexMethodStatementList", "entityIndexMethodStatement", "memberStatementList",
	"memberStatement", "propertyList", "property", "keyValueList", "keyValue",
	"namespace", "identifier",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type ProtonLangParser struct {
	*antlr.BaseParser
}

func NewProtonLangParser(input antlr.TokenStream) *ProtonLangParser {
	this := new(ProtonLangParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "ProtonLang.g4"

	return this
}

// ProtonLangParser tokens.
const (
	ProtonLangParserEOF           = antlr.TokenEOF
	ProtonLangParserStringLiteral = 1
	ProtonLangParserINCLUDE       = 2
	ProtonLangParserTARGET        = 3
	ProtonLangParserNAMESPACE     = 4
	ProtonLangParserCONTEXT       = 5
	ProtonLangParserALIAS         = 6
	ProtonLangParserINDEX         = 7
	ProtonLangParserMETHOD        = 8
	ProtonLangParserIN            = 9
	ProtonLangParserAS            = 10
	ProtonLangParserCOMPONENT     = 11
	ProtonLangParserEQUALS        = 12
	ProtonLangParserSEMICOLON     = 13
	ProtonLangParserUNDERSCORE    = 14
	ProtonLangParserCOLON         = 15
	ProtonLangParserDOUBLE_QUOTE  = 16
	ProtonLangParserLCURLEY       = 17
	ProtonLangParserRCURLEY       = 18
	ProtonLangParserPERIOD        = 19
	ProtonLangParserLESS_THAN     = 20
	ProtonLangParserGREATER_THAN  = 21
	ProtonLangParserLPAREN        = 22
	ProtonLangParserRPAREN        = 23
	ProtonLangParserCOMMA         = 24
	ProtonLangParserWORD          = 25
	ProtonLangParserNUMBER        = 26
	ProtonLangParserCOMMENT       = 27
	ProtonLangParserWS            = 28
)

// ProtonLangParser rules.
const (
	ProtonLangParserRULE_document                       = 0
	ProtonLangParserRULE_includeStatement               = 1
	ProtonLangParserRULE_targetStatement                = 2
	ProtonLangParserRULE_namespaceStatement             = 3
	ProtonLangParserRULE_contextStatement               = 4
	ProtonLangParserRULE_context                        = 5
	ProtonLangParserRULE_aliasStatement                 = 6
	ProtonLangParserRULE_alias                          = 7
	ProtonLangParserRULE_componentStatement             = 8
	ProtonLangParserRULE_asStatement                    = 9
	ProtonLangParserRULE_inStatement                    = 10
	ProtonLangParserRULE_component                      = 11
	ProtonLangParserRULE_entityIndexStatement           = 12
	ProtonLangParserRULE_entityIndex                    = 13
	ProtonLangParserRULE_entityIndexMethodStatementList = 14
	ProtonLangParserRULE_entityIndexMethodStatement     = 15
	ProtonLangParserRULE_memberStatementList            = 16
	ProtonLangParserRULE_memberStatement                = 17
	ProtonLangParserRULE_propertyList                   = 18
	ProtonLangParserRULE_property                       = 19
	ProtonLangParserRULE_keyValueList                   = 20
	ProtonLangParserRULE_keyValue                       = 21
	ProtonLangParserRULE_namespace                      = 22
	ProtonLangParserRULE_identifier                     = 23
)

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	var p = new(DocumentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtonLangParserRULE_document
	return p
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	var p = new(DocumentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtonLangParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) AllIncludeStatement() []IIncludeStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IIncludeStatementContext)(nil)).Elem())
	var tst = make([]IIncludeStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IIncludeStatementContext)
		}
	}

	return tst
}

func (s *DocumentContext) IncludeStatement(i int) IIncludeStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIncludeStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IIncludeStatementContext)
}

func (s *DocumentContext) TargetStatement() ITargetStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITargetStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITargetStatementContext)
}

func (s *DocumentContext) NamespaceStatement() INamespaceStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INamespaceStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INamespaceStatementContext)
}

func (s *DocumentContext) AllContextStatement() []IContextStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IContextStatementContext)(nil)).Elem())
	var tst = make([]IContextStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IContextStatementContext)
		}
	}

	return tst
}

func (s *DocumentContext) ContextStatement(i int) IContextStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IContextStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IContextStatementContext)
}

func (s *DocumentContext) AllAliasStatement() []IAliasStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAliasStatementContext)(nil)).Elem())
	var tst = make([]IAliasStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAliasStatementContext)
		}
	}

	return tst
}

func (s *DocumentContext) AliasStatement(i int) IAliasStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAliasStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAliasStatementContext)
}

func (s *DocumentContext) AllComponentStatement() []IComponentStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IComponentStatementContext)(nil)).Elem())
	var tst = make([]IComponentStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IComponentStatementContext)
		}
	}

	return tst
}

func (s *DocumentContext) ComponentStatement(i int) IComponentStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComponentStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IComponentStatementContext)
}

func (s *DocumentContext) AllEntityIndexStatement() []IEntityIndexStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEntityIndexStatementContext)(nil)).Elem())
	var tst = make([]IEntityIndexStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEntityIndexStatementContext)
		}
	}

	return tst
}

func (s *DocumentContext) EntityIndexStatement(i int) IEntityIndexStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEntityIndexStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEntityIndexStatementContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (p *ProtonLangParser) Document() (localctx IDocumentContext) {
	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ProtonLangParserRULE_document)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(51)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ProtonLangParserINCLUDE {
		{
			p.SetState(48)
			p.IncludeStatement()
		}

		p.SetState(53)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == ProtonLangParserTARGET {
		{
			p.SetState(54)
			p.TargetStatement()
		}

	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == ProtonLangParserNAMESPACE {
		{
			p.SetState(57)
			p.NamespaceStatement()
		}

	}
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ProtonLangParserCONTEXT {
		{
			p.SetState(60)
			p.ContextStatement()
		}

		p.SetState(65)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ProtonLangParserALIAS {
		{
			p.SetState(66)
			p.AliasStatement()
		}

		p.SetState(71)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ProtonLangParserCOMPONENT {
		{
			p.SetState(72)
			p.ComponentStatement()
		}

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ProtonLangParserINDEX {
		{
			p.SetState(78)
			p.EntityIndexStatement()
		}

		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IIncludeStatementContext is an interface to support dynamic dispatch.
type IIncludeStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIncludeStatementContext differentiates from other interfaces.
	IsIncludeStatementContext()
}

type IncludeStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIncludeStatementContext() *IncludeStatementContext {
	var p = new(IncludeStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtonLangParserRULE_includeStatement
	return p
}

func (*IncludeStatementContext) IsIncludeStatementContext() {}

func NewIncludeStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IncludeStatementContext {
	var p = new(IncludeStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtonLangParserRULE_includeStatement

	return p
}

func (s *IncludeStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *IncludeStatementContext) INCLUDE() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserINCLUDE, 0)
}

func (s *IncludeStatementContext) StringLiteral() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserStringLiteral, 0)
}

func (s *IncludeStatementContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserSEMICOLON, 0)
}

func (s *IncludeStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IncludeStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IncludeStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.EnterIncludeStatement(s)
	}
}

func (s *IncludeStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.ExitIncludeStatement(s)
	}
}

func (p *ProtonLangParser) IncludeStatement() (localctx IIncludeStatementContext) {
	localctx = NewIncludeStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ProtonLangParserRULE_includeStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(84)
		p.Match(ProtonLangParserINCLUDE)
	}
	{
		p.SetState(85)
		p.Match(ProtonLangParserStringLiteral)
	}
	{
		p.SetState(86)
		p.Match(ProtonLangParserSEMICOLON)
	}

	return localctx
}

// ITargetStatementContext is an interface to support dynamic dispatch.
type ITargetStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTargetStatementContext differentiates from other interfaces.
	IsTargetStatementContext()
}

type TargetStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTargetStatementContext() *TargetStatementContext {
	var p = new(TargetStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtonLangParserRULE_targetStatement
	return p
}

func (*TargetStatementContext) IsTargetStatementContext() {}

func NewTargetStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TargetStatementContext {
	var p = new(TargetStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtonLangParserRULE_targetStatement

	return p
}

func (s *TargetStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *TargetStatementContext) TARGET() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserTARGET, 0)
}

func (s *TargetStatementContext) Identifier() IIdentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentifierContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *TargetStatementContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserSEMICOLON, 0)
}

func (s *TargetStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TargetStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TargetStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.EnterTargetStatement(s)
	}
}

func (s *TargetStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.ExitTargetStatement(s)
	}
}

func (p *ProtonLangParser) TargetStatement() (localctx ITargetStatementContext) {
	localctx = NewTargetStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ProtonLangParserRULE_targetStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(88)
		p.Match(ProtonLangParserTARGET)
	}
	{
		p.SetState(89)
		p.Identifier()
	}
	{
		p.SetState(90)
		p.Match(ProtonLangParserSEMICOLON)
	}

	return localctx
}

// INamespaceStatementContext is an interface to support dynamic dispatch.
type INamespaceStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNamespaceStatementContext differentiates from other interfaces.
	IsNamespaceStatementContext()
}

type NamespaceStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamespaceStatementContext() *NamespaceStatementContext {
	var p = new(NamespaceStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtonLangParserRULE_namespaceStatement
	return p
}

func (*NamespaceStatementContext) IsNamespaceStatementContext() {}

func NewNamespaceStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamespaceStatementContext {
	var p = new(NamespaceStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtonLangParserRULE_namespaceStatement

	return p
}

func (s *NamespaceStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *NamespaceStatementContext) NAMESPACE() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserNAMESPACE, 0)
}

func (s *NamespaceStatementContext) Namespace() INamespaceContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INamespaceContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INamespaceContext)
}

func (s *NamespaceStatementContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserSEMICOLON, 0)
}

func (s *NamespaceStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamespaceStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamespaceStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.EnterNamespaceStatement(s)
	}
}

func (s *NamespaceStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.ExitNamespaceStatement(s)
	}
}

func (p *ProtonLangParser) NamespaceStatement() (localctx INamespaceStatementContext) {
	localctx = NewNamespaceStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ProtonLangParserRULE_namespaceStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(92)
		p.Match(ProtonLangParserNAMESPACE)
	}
	{
		p.SetState(93)
		p.Namespace()
	}
	{
		p.SetState(94)
		p.Match(ProtonLangParserSEMICOLON)
	}

	return localctx
}

// IContextStatementContext is an interface to support dynamic dispatch.
type IContextStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsContextStatementContext differentiates from other interfaces.
	IsContextStatementContext()
}

type ContextStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyContextStatementContext() *ContextStatementContext {
	var p = new(ContextStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtonLangParserRULE_contextStatement
	return p
}

func (*ContextStatementContext) IsContextStatementContext() {}

func NewContextStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ContextStatementContext {
	var p = new(ContextStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtonLangParserRULE_contextStatement

	return p
}

func (s *ContextStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ContextStatementContext) CONTEXT() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserCONTEXT, 0)
}

func (s *ContextStatementContext) AllContext() []IContextContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IContextContext)(nil)).Elem())
	var tst = make([]IContextContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IContextContext)
		}
	}

	return tst
}

func (s *ContextStatementContext) Context(i int) IContextContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IContextContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IContextContext)
}

func (s *ContextStatementContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserSEMICOLON, 0)
}

func (s *ContextStatementContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(ProtonLangParserCOMMA)
}

func (s *ContextStatementContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(ProtonLangParserCOMMA, i)
}

func (s *ContextStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ContextStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ContextStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.EnterContextStatement(s)
	}
}

func (s *ContextStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.ExitContextStatement(s)
	}
}

func (p *ProtonLangParser) ContextStatement() (localctx IContextStatementContext) {
	localctx = NewContextStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ProtonLangParserRULE_contextStatement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(96)
		p.Match(ProtonLangParserCONTEXT)
	}
	{
		p.SetState(97)
		p.Context()
	}
	p.SetState(102)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ProtonLangParserCOMMA {
		{
			p.SetState(98)
			p.Match(ProtonLangParserCOMMA)
		}
		{
			p.SetState(99)
			p.Context()
		}

		p.SetState(104)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(105)
		p.Match(ProtonLangParserSEMICOLON)
	}

	return localctx
}

// IContextContext is an interface to support dynamic dispatch.
type IContextContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsContextContext differentiates from other interfaces.
	IsContextContext()
}

type ContextContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyContextContext() *ContextContext {
	var p = new(ContextContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ProtonLangParserRULE_context
	return p
}

func (*ContextContext) IsContextContext() {}

func NewContextContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ContextContext {
	var p = new(ContextContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProtonLangParserRULE_context

	return p
}

func (s *ContextContext) GetParser() antlr.Parser { return s.parser }

func (s *ContextContext) AllIdentifier() []IIdentifierContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IIdentifierContext)(nil)).Elem())
	var tst = make([]IIdentifierContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IIdentifierContext)
		}
	}

	return tst
}

func (s *ContextContext) Identifier(i int) IIdentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentifierContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *ContextContext) COLON() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserCOLON, 0)
}

func (s *ContextContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserLPAREN, 0)
}

func (s *ContextContext) KeyValueList() IKeyValueListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IKeyValueListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IKeyValueListContext)
}

func (s *ContextContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(ProtonLangParserRPAREN, 0)
}

func (s *ContextContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ContextContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ContextContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.EnterContext(s)
	}
}

func (s *ContextContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ProtonLangListener); ok {
		listenerT.ExitContext(s)
	}
}
